syntax = "proto3";

package auth;

option go_package = "./pb";

message RegisterRequest {
  string email = 1;
  string password = 2;
}

message RegisterResponse {
  string user_id = 1;
  string message = 2;
}

message LoginWithEmailRequest {
  string email = 1;
  string password = 2;
}

message LoginWithGoogleRequest {
  string id_token = 1; // Google OAuth2 ID token
}

message LoginResponse {
  string access_token = 1;
  string refresh_token = 2;
  string user_id = 3;
}

message RefreshTokenRequest {
  string refresh_token = 1;
}

message RefreshTokenResponse {
  string access_token = 1;
  string refresh_token = 2;
}

message SendVerificationEmailRequest {
  string email = 1;
}

message SendVerificationEmailResponse {
  string message = 1;
}

message VerifyEmailRequest {
  string email = 1;
  string code = 2;
}

message VerifyEmailResponse {
  string message = 1;
}

// AuthService

service AuthService {
  rpc Register(RegisterRequest) returns (RegisterResponse);
  rpc LoginWithEmail(LoginWithEmailRequest) returns (LoginResponse);
  rpc LoginWithGoogle(LoginWithGoogleRequest) returns (LoginResponse);
  rpc RefreshToken(RefreshTokenRequest) returns (RefreshTokenResponse);
  rpc SendVerificationEmail(SendVerificationEmailRequest) returns (SendVerificationEmailResponse);
  rpc VerifyEmail(VerifyEmailRequest) returns (VerifyEmailResponse);
}